--- a/BookExchange3/BookExchange3/BookExchange3.csproj
+++ b/BookExchange3/BookExchange3/BookExchange3.csproj
@@ -171,18 +171,25 @@
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ReservesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201710040207590_books.cs" />
-    <Compile Include="Migrations\201710040207590_books.Designer.cs">
-      <DependentUpon>201710040207590_books.cs</DependentUpon>
+    <Compile Include="Migrations\201710041802034_1.cs" />
+    <Compile Include="Migrations\201710041802034_1.Designer.cs">
+      <DependentUpon>201710041802034_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710041937177_2.cs" />
+    <Compile Include="Migrations\201710041937177_2.Designer.cs">
+      <DependentUpon>201710041937177_2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Books.cs" />
+    <Compile Include="Models\BooksDbContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Reserve.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -241,12 +248,18 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Books\Create.cshtml" />
+    <Content Include="Views\Books\Donate.cshtml" />
     <Content Include="Views\Books\Delete.cshtml" />
     <Content Include="Views\Books\Details.cshtml" />
     <Content Include="Views\Books\Edit.cshtml" />
     <Content Include="Views\Books\Index.cshtml" />
     <Content Include="Views\Books\ListOfBooks.cshtml" />
+    <Content Include="Views\Reserves\Create.cshtml" />
+    <Content Include="Views\Reserves\Delete.cshtml" />
+    <Content Include="Views\Reserves\Details.cshtml" />
+    <Content Include="Views\Reserves\Edit.cshtml" />
+    <Content Include="Views\Reserves\Index.cshtml" />
+    <Content Include="Views\Books\Confirmation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -260,8 +273,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201710040207590_books.resx">
-      <DependentUpon>201710040207590_books.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201710041802034_1.resx">
+      <DependentUpon>201710041802034_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710041937177_2.resx">
+      <DependentUpon>201710041937177_2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
