--- a/BookExchange3/BookExchange3/bin/BookExchange3.dll.config
+++ b/BookExchange3/BookExchange3/bin/BookExchange3.dll.config
@@ -8,9 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookExchange3-20171003060352.mdf;Initial Catalog=aspnet-BookExchange3-20171003060352;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+  <connectionStrings>    
+    <add name="AutoDbContext" connectionString="Data Source=SILVER\PLUTO;Initial Catalog=CCC;Integrated Security=True;MultipleActiveResultSets=True"   providerName="System.Data.SqlClient"/>
+
+    <add name="BooksDbContext" connectionString="Data Source=SILVER\PLUTO;Initial Catalog=Books;Integrated Security=True;MultipleActiveResultSets=True"   providerName="System.Data.SqlClient"/>
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
