--- a/BookExchange3/BookExchange3/BookExchange3.csproj
+++ b/BookExchange3/BookExchange3/BookExchange3.csproj
@@ -175,13 +175,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201710041802034_1.cs" />
-    <Compile Include="Migrations\201710041802034_1.Designer.cs">
-      <DependentUpon>201710041802034_1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201710041937177_2.cs" />
-    <Compile Include="Migrations\201710041937177_2.Designer.cs">
-      <DependentUpon>201710041937177_2.cs</DependentUpon>
+    <Compile Include="Migrations\201710051329551_newMigration.cs" />
+    <Compile Include="Migrations\201710051329551_newMigration.Designer.cs">
+      <DependentUpon>201710051329551_newMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -260,6 +256,7 @@
     <Content Include="Views\Reserves\Edit.cshtml" />
     <Content Include="Views\Reserves\Index.cshtml" />
     <Content Include="Views\Books\Confirmation.cshtml" />
+    <Content Include="Views\Reserves\RequestConfirmation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -273,11 +270,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201710041802034_1.resx">
-      <DependentUpon>201710041802034_1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201710041937177_2.resx">
-      <DependentUpon>201710041937177_2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201710051329551_newMigration.resx">
+      <DependentUpon>201710051329551_newMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
