--- a/BookExchange3/BookExchange3/BookExchange3.csproj
+++ b/BookExchange3/BookExchange3/BookExchange3.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\201710051637274_new1.Designer.cs">
       <DependentUpon>201710051637274_new1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710111522473_2.cs" />
+    <Compile Include="Migrations\201710111522473_2.Designer.cs">
+      <DependentUpon>201710111522473_2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Books.cs" />
@@ -292,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710051637274_new1.resx">
       <DependentUpon>201710051637274_new1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710111522473_2.resx">
+      <DependentUpon>201710111522473_2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
