--- a/BookExchange3/BookExchange3/Web.config
+++ b/BookExchange3/BookExchange3/Web.config
@@ -9,10 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=SILVER\PLUTO;initial catalog=AttendanceDB;user id=UID;password=PWD;Integrated Security=True" providerName="System.Data.SqlClient"  />
+    <add name="DefaultConnection" connectionString="Data Source=SILVER\PLUTO;Initial Catalog=Books;Integrated Security=True;MultipleActiveResultSets=True"   providerName="System.Data.SqlClient"/>
+    
 
     <add name="BooksDbContext" connectionString="Data Source=SILVER\PLUTO;Initial Catalog=Books;Integrated Security=True;MultipleActiveResultSets=True"   providerName="System.Data.SqlClient"/>
 
+    <!--
+    <add name="BooksDbContext" connectionString="Data Source=SILVER\PLUTO;Initial Catalog=Books;Integrated Security=True;MultipleActiveResultSets=True"   providerName="System.Data.SqlClient"/>  
+    -->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
